--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <link data-trunk href="./style.css" rel="tailwind-css" />
+    <link data-trunk href="main.css" rel="css"/>
 </head>
 <body></body>
 </html>
